package sitammatt.example_rest.dto;

import java.util.UUID;

public class BaseDto {
    public String createdDate;
    public String modifiedDate;
    public UUID guid;
}
