package sitammatt.example_rest.dto;

public class ErrorDto {
    public int Status;
    public String Message;
}
