package sitammatt.example_rest.dto;

import java.util.UUID;

public class TaskDto extends BaseDto{
    public String title;
    public String description;

    public UUID userId;
}
